fix: set stack grid to exactly 3 columns on mobile

--- a/src/sections/Stack/Stack.module.scss
+++ b/src/sections/Stack/Stack.module.scss
@@ -50,6 +50,6 @@
 
 @media (width <= 550px) {
   .stack__grid {
-    grid-template-columns: repeat(auto-fill, minmax(3, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
   }
 }
